--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev": "bun run --filter='*' dev",
     "dev:server": "bun run --filter=server dev",
-    "dev:web": "bun run --filter=web dev"
+    "dev:web": "bun run --filter=web dev",
+    "typecheck": "tsc -b"
   },
   "devDependencies": {
     "typescript": "^5.7.3"
