--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -13,9 +13,7 @@
     "resolveJsonModule": true,
     "types": []
   },
-  "references": [
-    { "path": "../../packages/shared" }
-  ],
+  "references": [{ "path": "../../packages/shared" }],
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
