--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "dev": "bun run --filter='*' dev",
     "dev:server": "bun run --filter=server dev",
     "dev:web": "bun run --filter=web dev",
+    "check": "biome check .",
+    "check:fix": "biome check --write .",
     "typecheck": "tsc -b"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.14",
     "typescript": "^5.7.3"
   }
 }
