--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -7,5 +7,13 @@
   "types": "./src/index.ts",
   "exports": {
     ".": "./src/index.ts"
+  },
+  "dependencies": {
+    "pino": "^10.3.0",
+    "zod": "^4.3.6"
+  },
+  "devDependencies": {
+    "@types/node": "^25.2.2",
+    "pino-pretty": "^13.1.3"
   }
 }
