feat(server): add Hono app with Pino logging and health endpoint
Initialize basic Hono server with pinoLogger middleware for structured
request logging (requestId, responseTime) and a health check endpoint.
Server exports Bun-compatible module with configurable PORT.

Adds dev:logdy script for development browser logging UI.

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "bun --hot src/index.ts"
+    "dev": "bun --hot src/index.ts",
+    "dev:logdy": "bun run dev | logdy --fallthrough"
   },
   "dependencies": {
-    "@open-news/shared": "workspace:*"
+    "@open-news/shared": "workspace:*",
+    "hono": "^4.11.9",
+    "hono-pino": "^0.10.3"
   }
 }
