--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,8 +8,14 @@
   },
   "dependencies": {
     "@open-news/shared": "workspace:*",
+    "@tailwindcss/vite": "^4.0.0",
+    "@tanstack/react-router": "^1.159.3",
+    "@tanstack/react-router-devtools": "^1.159.3",
+    "@tanstack/router-plugin": "^1.159.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.0.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/react": "^19.0.6",
