feat(server): set up Drizzle ORM + SQLite schema
Implement full database schema from SPEC.md §4 with bun:sqlite driver.

- Add drizzle-orm and drizzle-kit dependencies
- Create schema.ts with 8 tables: settings, sources, raw_articles,
  daily_topics, tags, topic_tags, topic_sources, generated_articles
- Configure WAL mode, pragmas (busy_timeout, synchronous, foreign_keys)
- Add db connection with Drizzle instance export
- Generate and apply initial migration (0000)
- Add db:generate, db:migrate, db:studio scripts to package.json
- Configure Biome to ignore auto-generated drizzle/ directory
- Add @types/bun for bun:sqlite type definitions

--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -11,7 +11,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "types": []
+    "types": ["bun"]
   },
   "references": [{ "path": "../../packages/shared" }],
   "include": ["src/**/*"],
