--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "dev:web": "bun run --filter=web dev",
     "check": "biome check .",
     "check:fix": "biome check --write .",
-    "typecheck": "tsc -b"
+    "typecheck": "tsc -b",
+    "db:generate": "bun run --cwd apps/server drizzle-kit generate",
+    "db:migrate": "bun run --cwd apps/server drizzle-kit migrate",
+    "db:studio": "bun run --cwd apps/server drizzle-kit studio"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.14",
+    "@types/bun": "^1.3.8",
     "typescript": "^5.7.3"
   }
 }
