--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "@open-news/shared": "workspace:*",
+    "drizzle-orm": "^0.40.0",
     "hono": "^4.11.9",
     "hono-pino": "^0.10.3"
+  },
+  "devDependencies": {
+    "drizzle-kit": "^0.30.2"
   }
 }
