--- a/biome.json
+++ b/biome.json
@@ -14,6 +14,15 @@
       "linter": {
         "enabled": false
       }
+    },
+    {
+      "includes": ["**/drizzle/**"],
+      "formatter": {
+        "enabled": false
+      },
+      "linter": {
+        "enabled": false
+      }
     }
   ],
   "formatter": {
