feat(web): set up ShadCN/ui with BasaltUI theme
Configure TypeScript path aliases (@/* → ./src/*) and update Vite
resolver. Initialize ShadCN UI with neutral color base and New York
style. Integrate BasaltUI design system via CSS import for consistent
theming across components.

Install initial component set:
- button: variant system with BasaltUI focus states
- input: form input with validation styling
- card: layout component with header/content/footer slots
- dialog: modal component with overlay

Add component showcase to index route for visual verification.

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -11,7 +11,11 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "references": [{ "path": "../../packages/shared" }],
   "include": ["src/**/*"],
