--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,8 +12,14 @@
     "@tanstack/react-router": "^1.159.3",
     "@tanstack/react-router-devtools": "^1.159.3",
     "@tanstack/router-plugin": "^1.159.3",
+    "basalt-ui": "^0.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.563.0",
+    "radix-ui": "^1.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.0.0",
     "zod": "^4.3.6"
   },
@@ -21,6 +27,8 @@
     "@types/react": "^19.0.6",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "shadcn": "^3.8.4",
+    "tw-animate-css": "^1.4.0",
     "vite": "^6.0.7"
   }
 }
