build(docker): add Docker configuration for single-container deployment
Implement multi-stage Dockerfile with separate build steps for React SPA
and production runtime. Docker Compose configuration includes persistent
volume mount for SQLite database and environment variable template.

Changes:
- Dockerfile: 3-stage build (deps → build-web → runtime)
  - Stage 1: Install all dependencies (frozen lockfile)
  - Stage 2: Build React SPA with Vite
  - Stage 3: Slim production image with Bun runtime
  - Includes healthcheck endpoint and non-root user
- docker-compose.yml: Service definition with volume mount for /app/data
- .dockerignore: Exclude dev files, docs, and build artifacts
- .env.example: Template for required environment variables
- apps/web/package.json: Add build script for Vite production build
- biome.json: Disable formatter/assist for routeTree.gen.ts
- routeTree.gen.ts: Auto-regenerated by TanStack Router
- bun.lock: Updated dependencies

--- a/biome.json
+++ b/biome.json
@@ -11,7 +11,13 @@
   "overrides": [
     {
       "includes": ["**/routeTree.gen.ts"],
+      "formatter": {
+        "enabled": false
+      },
       "linter": {
+        "enabled": false
+      },
+      "assist": {
         "enabled": false
       }
     },
