--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.14",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/bun": "^1.3.8",
+    "shadcn": "^3.8.4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.7.3"
   }
 }
