--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,11 +9,11 @@
   },
   "dependencies": {
     "@open-news/shared": "workspace:*",
-    "@tailwindcss/vite": "^4.0.0",
+    "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-router": "^1.159.3",
     "@tanstack/react-router-devtools": "^1.159.3",
     "@tanstack/router-plugin": "^1.159.3",
-    "basalt-ui": "^0.1.0",
+    "basalt-ui": "link:basalt-ui",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
@@ -21,10 +21,11 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "^4.1.18",
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "@types/react": "^19.0.6",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
